--- a/1_diabetes.ipynb
+++ b/1_diabetes.ipynb
@@ -44,7 +44,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Modélisation et prédiction de l'occurrence du diabète par l'application de techniques avancées de machine learning#"
+        "#Modélisation et prédiction de l'occurrence du diabète par l'application de techniques avancées de machine learning"
       ],
       "metadata": {
         "id": "sVLqv3R3gnh8"
